--- a/web/src/app/dashboard/layout/sidebar/sidebar.component.html
+++ b/web/src/app/dashboard/layout/sidebar/sidebar.component.html
@@ -25,8 +25,26 @@
             </a>
             <ul class="nav nav-treeview">
               <li class="nav-item">
+                <a routerLink="obras" class="nav-link" routerLinkActive="active">
+                  <i class="fas fa-tractor nav-icon"></i>
+                  <p>Obras</p>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a routerLink="materiales" class="nav-link" routerLinkActive="active">
+                  <i class="fas fa-layer-group nav-icon"></i>
+                  <p>Materiales</p>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a routerLink="herramientas" class="nav-link" routerLinkActive="active">
+                  <i class="fas fa-hammer nav-icon"></i>
+                  <p>Herramientas</p>
+                </a>
+              </li>
+              <li class="nav-item">
                 <a routerLink="usuarios" class="nav-link" routerLinkActive="active">
-                  <i class="far fa-circle nav-icon"></i>
+                  <i class="far fa-user-circle nav-icon"></i>
                   <p>Usuarios</p>
                 </a>
               </li>
