WEB - Crud de proveedores

--- a/web/src/app/dashboard/layout/sidebar/sidebar.component.html
+++ b/web/src/app/dashboard/layout/sidebar/sidebar.component.html
@@ -43,6 +43,12 @@
                 </a>
               </li>
               <li class="nav-item">
+                <a routerLink="proveedores" class="nav-link" routerLinkActive="active">
+                  <i class="fas fa-truck-moving nav-icon"></i>
+                  <p>Proveedores</p>
+                </a>
+              </li>
+              <li class="nav-item">
                 <a routerLink="usuarios" class="nav-link" routerLinkActive="active">
                   <i class="far fa-user-circle nav-icon"></i>
                   <p>Usuarios</p>
