WEB - alta y visualización de pedidos primer version

--- a/web/src/app/dashboard/layout/sidebar/sidebar.component.html
+++ b/web/src/app/dashboard/layout/sidebar/sidebar.component.html
@@ -49,6 +49,12 @@
                 </a>
               </li>
               <li class="nav-item">
+                <a routerLink="pedidos" class="nav-link" routerLinkActive="active">
+                  <i class="fas fa-tasks nav-icon"></i>
+                  <p>Pedidos</p>
+                </a>
+              </li>
+              <li class="nav-item">
                 <a routerLink="usuarios" class="nav-link" routerLinkActive="active">
                   <i class="far fa-user-circle nav-icon"></i>
                   <p>Usuarios</p>
