--- a/web/src/app/dashboard/obras/obras-create/obras-create.component.html
+++ b/web/src/app/dashboard/obras/obras-create/obras-create.component.html
@@ -3,7 +3,7 @@
   <div class="col-12">
     <div class="card card-primary mt-2 container">
       <!-- form start -->
-      <form role="form" ngNativeValidate [formGroup]="forma" (ngSubmit)="crearUsuario()" action="" method="post">
+      <form role="form" ngNativeValidate [formGroup]="forma" (ngSubmit)="crearObra()" action="" method="post">
         <div class="card-body form-row">
           <div class="form-group col-md-12">
             <label for="nombre">Nombre</label>
