--- a/web/src/styles.scss
+++ b/web/src/styles.scss
@@ -2,6 +2,7 @@
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
+@import "~@ng-select/ng-select/themes/default.theme.css";
 
 $base-color: #0079FE;
 $btn-background: #fff;
