--- a/web/src/app/dashboard/obras/obras-create/obras-create.component.html
+++ b/web/src/app/dashboard/obras/obras-create/obras-create.component.html
@@ -16,6 +16,52 @@
               placeholder="Descripción" required>
           </div>
         </div>
+
+        <div class="row p-1" formGroupName="direccion">
+
+          <div class="form-group col-md-3">
+            <label for="calle">Calle</label>
+            <input formControlName="calle" name="calle" type="text" class="form-control"
+              placeholder="Calle" required>
+          </div>
+
+          <div class="form-group col-md-1">
+            <label for="numero">Número</label>
+            <input formControlName="numero" name="numero" type="text" class="form-control"
+              placeholder="Número" required>
+          </div>
+
+          <div class="form-group col-md-1">
+            <label for="piso">Piso</label>
+            <input formControlName="piso" name="piso" type="text" class="form-control"
+              placeholder="Piso">
+          </div>
+
+          <div class="form-group col-md-1">
+            <label for="departamento">Dpto</label>
+            <input formControlName="departamento" name="departamento" type="text"
+              class="form-control" placeholder="Dpto">
+          </div>
+
+          <div class="form-group col-md-2">
+            <label for="localidad">Localidad</label>
+            <input formControlName="localidad" name="localidad" type="text" class="form-control"
+              placeholder="Localidad" required>
+          </div>
+
+          <div class="form-group col-md-2">
+            <label for="provincia">Provincia</label>
+            <input formControlName="provincia" name="provincia" type="text" class="form-control"
+              placeholder="Provincia" required>
+          </div>
+
+          <div class="form-group col-md-2">
+            <label for="pais">Pais</label>
+            <input formControlName="pais" name="pais" type="text" class="form-control"
+              placeholder="Pais" required>
+          </div>
+
+        </div>
         <!-- /.card-body -->
         <div class="card-footer row justify-content-end">
           <a routerLink="obras" type="button" class="btn btn-secondary mr-2">Cancelar</a>
