--- a/web/src/app/dashboard/proveedores/proveedores-list/proveedores-list.component.html
+++ b/web/src/app/dashboard/proveedores/proveedores-list/proveedores-list.component.html
@@ -46,5 +46,5 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
-  <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+  <mat-paginator [pageSize]="10" [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
 </div>
