--- a/web/src/app/dashboard/obras/obras-create/obras-create.component.html
+++ b/web/src/app/dashboard/obras/obras-create/obras-create.component.html
@@ -1,71 +1,113 @@
 <div class="container-fluid">
-  <h3>Crear Obra</h3>
+  <h3>Crear obra</h3>
   <div class="col-12">
     <div class="card card-primary mt-2 container">
       <!-- form start -->
-      <form role="form" ngNativeValidate [formGroup]="forma" (ngSubmit)="crearObra()" action="" method="post">
+      <div class="alert alert-danger alert-dismissible fade show" role="alert" *ngIf="forma.errors?.customMsgError">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close"
+          (click)="forma.setErrors({customMsgError: null})">
+          <span aria-hidden="true">&times;</span>
+        </button>
+        {{ forma.errors?.customMsgError }}
+      </div>
+
+      <form role="form" ngNativeValidate [formGroup]="forma" (ngSubmit)="createItem()" action="" method="post">
         <div class="card-body form-row">
           <div class="form-group col-md-12">
-            <label for="nombre">Nombre</label>
+            <label for="nombre">Nombre*</label>
             <input formControlName="nombre" name="nombre" type="text" class="form-control"
-              placeholder="Nombre de la obra" required>
+              placeholder="Nombre de la obra" required
+              [ngClass]="{'is-invalid': forma.controls['nombre'].errors?.customMsgError }">
+            <div class="invalid-feedback">
+              {{ forma.controls['nombre'].errors?.customMsgError }}
+            </div>
           </div>
           <div class="form-group col-md-12">
-            <label for="descripcion">Descripción</label>
+            <label for="descripcion">Descripción*</label>
             <input formControlName="descripcion" name="descripcion" type="text" class="form-control"
-              placeholder="Descripción" required>
+              placeholder="Descripción" required
+              [ngClass]="{'is-invalid': forma.controls['descripcion'].errors?.customMsgError }">
+            <div class="invalid-feedback">
+              {{ forma.controls['descripcion'].errors?.customMsgError }}
+            </div>
           </div>
+
+          <div class="row p-1" formGroupName="direccion">
+
+            <div class="form-group col-md-3">
+              <label for="calle">Calle*</label>
+              <input formControlName="calle" name="calle" type="text" class="form-control" placeholder="Calle" required
+                [ngClass]="{'is-invalid': forma.get('direccion.calle').errors?.customMsgError }">
+              <div class="invalid-feedback">
+                {{  forma.get('direccion.calle').errors?.customMsgError }}
+              </div>
+            </div>
+
+            <div class="form-group col-md-1">
+              <label for="numero">Número</label>
+              <input formControlName="numero" name="numero" type="text" class="form-control" placeholder="Número"
+                [ngClass]="{'is-invalid': forma.get('direccion.numero').errors?.customMsgError }">
+              <div class="invalid-feedback">
+                {{  forma.get('direccion.numero').errors?.customMsgError }}
+              </div>
+            </div>
+
+            <div class="form-group col-md-1">
+              <label for="piso">Piso</label>
+              <input formControlName="piso" name="piso" type="text" class="form-control" placeholder="Piso"
+                [ngClass]="{'is-invalid': forma.get('direccion.piso').errors?.customMsgError }">
+              <div class="invalid-feedback">
+                {{  forma.get('direccion.piso').errors?.customMsgError }}
+              </div>
+            </div>
+
+            <div class="form-group col-md-1">
+              <label for="departamento">Dpto</label>
+              <input formControlName="departamento" name="departamento" type="text" class="form-control"
+                placeholder="Dpto"
+                [ngClass]="{'is-invalid': forma.get('direccion.departamento').errors?.customMsgError }">
+              <div class="invalid-feedback">
+                {{  forma.get('direccion.departamento').errors?.customMsgError }}
+              </div>
+            </div>
+
+            <div class="form-group col-md-2">
+              <label for="localidad">Localidad*</label>
+              <input formControlName="localidad" name="localidad" type="text" class="form-control"
+                placeholder="Localidad" required
+                [ngClass]="{'is-invalid': forma.get('direccion.localidad').errors?.customMsgError }">
+              <div class="invalid-feedback">
+                {{  forma.get('direccion.localidad').errors?.customMsgError }}
+              </div>
+            </div>
+
+            <div class="form-group col-md-2">
+              <label for="provincia">Provincia*</label>
+              <input formControlName="provincia" name="provincia" type="text" class="form-control"
+                placeholder="Provincia" required
+                [ngClass]="{'is-invalid': forma.get('direccion.provincia').errors?.customMsgError }">
+              <div class="invalid-feedback">
+                {{  forma.get('direccion.provincia').errors?.customMsgError }}
+              </div>
+            </div>
+
+            <div class="form-group col-md-2">
+              <label for="pais">Pais*</label>
+              <input formControlName="pais" name="pais" type="text" class="form-control" placeholder="Pais" required
+                [ngClass]="{'is-invalid': forma.get('direccion.pais').errors?.customMsgError }">
+              <div class="invalid-feedback">
+                {{  forma.get('direccion.pais').errors?.customMsgError }}
+              </div>
+            </div>
+
+          </div>
+
         </div>
 
-        <div class="row p-1" formGroupName="direccion">
-
-          <div class="form-group col-md-3">
-            <label for="calle">Calle</label>
-            <input formControlName="calle" name="calle" type="text" class="form-control"
-              placeholder="Calle" required>
-          </div>
-
-          <div class="form-group col-md-1">
-            <label for="numero">Número</label>
-            <input formControlName="numero" name="numero" type="text" class="form-control"
-              placeholder="Número" required>
-          </div>
-
-          <div class="form-group col-md-1">
-            <label for="piso">Piso</label>
-            <input formControlName="piso" name="piso" type="text" class="form-control"
-              placeholder="Piso">
-          </div>
-
-          <div class="form-group col-md-1">
-            <label for="departamento">Dpto</label>
-            <input formControlName="departamento" name="departamento" type="text"
-              class="form-control" placeholder="Dpto">
-          </div>
-
-          <div class="form-group col-md-2">
-            <label for="localidad">Localidad</label>
-            <input formControlName="localidad" name="localidad" type="text" class="form-control"
-              placeholder="Localidad" required>
-          </div>
-
-          <div class="form-group col-md-2">
-            <label for="provincia">Provincia</label>
-            <input formControlName="provincia" name="provincia" type="text" class="form-control"
-              placeholder="Provincia" required>
-          </div>
-
-          <div class="form-group col-md-2">
-            <label for="pais">Pais</label>
-            <input formControlName="pais" name="pais" type="text" class="form-control"
-              placeholder="Pais" required>
-          </div>
-
-        </div>
         <!-- /.card-body -->
         <div class="card-footer row justify-content-end">
           <a routerLink="obras" type="button" class="btn btn-secondary mr-2">Cancelar</a>
-          <button [disabled]="forma.invalid" type="submit" class="btn btn-primary">Guardar</button>
+          <button [disabled]="this.forma.pristine" type="submit" class="btn btn-primary">Guardar</button>
         </div>
       </form>
     </div>
