--- a/web/src/app/dashboard/materiales/materiales-create/materiales-create.component.html
+++ b/web/src/app/dashboard/materiales/materiales-create/materiales-create.component.html
@@ -68,7 +68,7 @@
         <!-- /.card-body -->
         <div class="card-footer row justify-content-end">
           <a routerLink="materiales" type="button" class="btn btn-secondary mr-2">Cancelar</a>
-          <button [disabled]="this.forma.pristine" type="submit" class="btn btn-primary">Guardar</button>
+          <button [disabled]="forma.pristine" type="submit" class="btn btn-primary">Guardar</button>
         </div>
       </form>
     </div>
